--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <button onclick="appendNumber('7')">7</button>
+<button onclick="appendNumber('8')">8</button>
+<button onclick="appendNumber('9')">9</button>
+<button onclick="setOperation('*')">×</button>
+<button onclick="appendNumber('4')">4</button>
+<button onclick="appendNumber('5')">5</button>
+<button onclick="appendNumber('6')">6</button>
+<button onclick="setOperation('+')">+</button>
 </body>
 </html>
