feat: ajout affichage résultat et bouton reset

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div class="ecran" id="display">0</div>
         <div class="boutons">
             <!-- Les boutons seront ajoutés par les collaborateurs -->
+             <button onclick="reset()" class="reset">AC</button>
+<button onclick="calculate()" class="equals">=</button>
         </div>
     </div>
     <script src="script.js"></script>
